Fixed: Text overlapping parent containers and continuing off page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -390,9 +390,9 @@ footer a:hover{
   margin: 0 auto;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 900px) {
 .container {
-    width: 1100px;
+    width: 100%;
 }
 }
 
